--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c",
+    "build": "node_modules/rollup/bin/rollup -c",
+    "watch": "node_modules/rollup/bin/rollup -cw",
     "start": "node_modules/electron/dist/electron build/bundle.js"
   },
-  "author": "demonburrito@gmail.com",
+  "author": {
+    "name": "daemonburrito",
+    "email": "demonburrito@gmail.com"
+  },
   "license": "GPL-3.0",
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -17,6 +21,20 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "electron": "^1.7.6",
-    "rollup-plugin-babel": "^3.0.2"
+    "eslint": "^4.6.1",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-react": "^7.3.0",
+    "rollup": "^0.48.0",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-eslint": "^4.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.1.0",
+    "rollup-plugin-node-resolve": "^3.0.0"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
