Organization, rollup includes, QoL
* Including specific modules from `node_modules` again.
* QoL
  * Babel resolver for autocomplete imports, and eslint plugin for
    linting them (using with Atom's `autocomplete_modules`, we shall see
	how that goes.
* Re-org
  * `main` directory for the electron code, as inspired by Atom's layout
    (Atom's source is nice, despite being coffeescript).

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,12 @@
     "react",
     "stage-0"
   ],
-  "plugins": ["external-helpers"],
+  "plugins": [
+    "external-helpers",
+    ["module-resolver", {
+      "root": ["./src"]
+    }]
+  ],
   "env": {
     "development": {}
   }
