--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "electron": "^1.7.6",
     "eslint": "^4.6.1",
+    "eslint-import-resolver-babel-module": "^3.0.0",
     "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-react": "^7.3.0",
     "rollup": "^0.48.0",
@@ -34,6 +37,7 @@
     "rollup-plugin-node-resolve": "^3.0.0"
   },
   "dependencies": {
+    "devtron": "^1.4.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
